kubernetes/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facebook-frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facebook-frontend
  template:
    metadata:
      labels:
        app: facebook-frontend
    spec:
      containers:
        - name: facebook-frontend
          image: saykot/facebook-clone-frontend:1.0.2
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: facebook-frontend-srv
spec:
  selector:
    app: facebook-frontend
  ports:
    - port: 3000
      targetPort: 3000
