kubernetes/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: facebook-mongo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: facebook-mongo
  template:
    metadata:
      labels:
        app: facebook-mongo
    spec:
      containers:
        - name: facebook-mongo
          image: mongo
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: facebook-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: facebook-mongo
  ports:
    - port: 27017
      targetPort: 27017
